# deploy_image_classification

./: README.md
image_classification/: Dockerfile  pyproject.toml
image_classification/src/: main.py
image_classification/training/: train_model.py
